# Bubble

./: .gitignore  AGENTS.md  Bubble.py  BubbleBot.py  CLAUDE.md  GEMINI.md  MANIFEST.in  README.md  RELEASE_NOTES.md  bubblebot_fixed.py  debug_app.py  debug_detailed.py  debug_window.py  diagnose_pyobjc.py  force_window_test.py  minimal_test.py  pyproject.toml  quick_test.py  requirements.txt  setup.py  simple_test.py  simple_window_test.py  test_app.py  test_complete_fix.py  test_dialog.py  test_exit.py  test_fixed.py  test_interaction.py  test_signal.py  test_window_display.py  window_test.py  窗口显示和图标修复.md  终端信号处理修复.md  退出功能修复说明.md
.aim/: memory-project.jsonl
.github/workflows/: release-macos.yml  release.yml
.spec-workflow/: session.json
.spec-workflow/approvals/parallel-ai-and-page-threshold/: approval_1757156150127_z22kxa90w.json
.spec-workflow/approvals/project-standardization/: approval_1756751077405_uzd3q1zlh.json  approval_1756751257805_0phggsf3q.json  approval_1756751535127_rt6yam1ab.json  approval_1756752299266_ebuorjoyb.json  (+11 more)
src/bubble/: __init__.py  app.py  constants.py  health_checks.py  launcher.py  listener.py  main.py
src/bubble/i18n/: __init__.py  (+5 more)
src/bubblebot/: __init__.py  app.py  constants.py  health_checks.py  launcher.py  listener.py  main.py
src/bubblebot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_i18n.py  test_main.py  test_page_threshold.py  test_settings.py  test_status_bar.py  test_toast_ui.py  test_window_limit.py
tools/: build_macos.sh  round_and_build_icons.py
(+41 files in other folders)
